--- a/tips/Base.lproj/LaunchScreen.xib
+++ b/tips/Base.lproj/LaunchScreen.xib
@@ -8,6 +8,9 @@
         <mutableArray key="NeutraDisp-LightAlt.otf">
             <string>NeutraDisp-LightAlt</string>
         </mutableArray>
+        <mutableArray key="NeutraDisp-Medium.otf">
+            <string>NeutraDisp-Medium</string>
+        </mutableArray>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -16,9 +19,15 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="%" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="18" y="167" width="444" height="145"/>
-                    <fontDescription key="fontDescription" name="NeutraDisp-LightAlt" family="Neutra Display" pointSize="125"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="STRAIGHT" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
+                    <rect key="frame" x="19" y="155" width="444" height="78"/>
+                    <fontDescription key="fontDescription" name="NeutraDisp-Medium" family="Neutra Display" pointSize="32"/>
+                    <color key="textColor" red="0.99859368800000003" green="0.93659985069999996" blue="0.83961439130000004" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TIP’N" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="f5r-e2-dZj">
+                    <rect key="frame" x="18" y="204" width="444" height="78"/>
+                    <fontDescription key="fontDescription" name="NeutraDisp-LightAlt" family="Neutra Display" pointSize="65"/>
                     <color key="textColor" red="0.99859368800000003" green="0.93659985069999996" blue="0.83961439130000004" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
